--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,8 @@
 
 .bg-hero-pattern {
   width: 100%;
-  height: 80vh;
-  background-image: url('/public/post-landscape-3.jpg');
+  height: 100vh;
+  background-image: url('/post-landscape-3.jpg');
 }
 
 
